# glo

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
public/: buffer-worklet.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  stream_proxy.rs
src/api/: radioBrowser.ts
src/assets/: pixel-sprites.tsx
src/audio/: rollingBuffer.ts  wavEncoder.ts
src/components/: ClipLibrary.tsx  FirstRunModal.tsx  Player.tsx  SampleControls.tsx  Sidebar.tsx  StationList.tsx
src/hooks/: useClipSampler.ts
src/lib/: settings.ts  tauri.ts
