[package]
name = "glo"
version = "0.1.0"
description = "A pixel-pretty desktop radio sampler"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/brawnyr/glo"

[lib]
name = "glo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "net", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
url = "2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
